[gd_scene load_steps=2 format=3 uid="uid://bk2c4rt30hr3p"]

[ext_resource type="Script" path="res://UI/PlayerLineItem.gd" id="1_qnsyh"]

[node name="PlayerLineItem" type="HBoxContainer"]
size_flags_horizontal = 3
theme_override_constants/separation = 4
script = ExtResource("1_qnsyh")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="Label2" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="Label3" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.423529, 0, 0, 1)
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2

[node name="Label5" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.627451, 0, 1)
theme_override_font_sizes/font_size = 8

[node name="Label4" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
